<resources>
    <string name="app_name">CoSinging</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="login_enter">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="cancel">Cancel</string>
    <string name="password_recovery">Password recovery</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="next">Next</string>
    <string name="i_don_t_remember_my_login">I don\'t remember my login</string>
    <string name="enter_code">Enter code</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="confirm">Confirm</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="create_an_account">Create an account</string>
    <string name="cosinging_service"><u>CoSinging Service</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="continue_auth">Continue</string>
    <string name="have_an_account">Have an account?</string>
    <string name="wrong_email">Wrong email?</string>
    <string name="change"><u>Change</u></string>
    <string name="didn_t_get_the_code">Didn\'t get the code?</string>
    <string name="resend"><u>Resend</u></string>
</resources>