<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".login.LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round" />

        <EditText
            android:id="@+id/recovery_1_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"

            android:background="@drawable/login_edittext"

            android:drawableStart="@drawable/login_email_theme"

            android:drawablePadding="15dp"
            android:focusedByDefault="false"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/recovery_1_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:padding="10dp"
            android:text="@string/i_don_t_remember_my_login" />

        <Button
            android:id="@+id/recovery_1_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="70dp"

            android:background="@drawable/login_button"

            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/login_button_text"
            android:textSize="24sp" />

    </LinearLayout>

</RelativeLayout>