<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardCornerRadius="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/login_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sign_in_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:visibility="visible"
                android:padding="5dp"
                android:layout_marginTop="5dp"

                android:textColor="@color/login_button_text"
                android:textSize="28sp"
                android:textStyle="bold"
                android:text="Sign in"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <EditText
                    android:id="@+id/sign_in_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"

                    android:paddingStart="10dp"

                    android:background="@drawable/login_edittext"

                    android:drawableStart="@drawable/login_userlogin_theme"
                    android:drawablePadding="15dp"
                    android:hint="@string/login"
                    android:inputType="textEmailAddress" />

                <View
                    android:id="@+id/sign_in_view_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_below="@+id/sign_in_login"
                    android:visibility="gone"
                    android:background="@color/white"/>

                <EditText
                    android:id="@+id/sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="5dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="5dp"

                    android:paddingStart="10dp"
                    android:layout_below="@id/sign_in_view_1"

                    android:background="@drawable/login_edittext"

                    android:drawableStart="@drawable/login_lock_theme"
                    android:drawablePadding="15dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <View
                    android:id="@+id/sign_in_view_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_below="@+id/sign_in_password"

                    android:visibility="visible" />

                <EditText
                    android:id="@+id/sign_in_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="5dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="5dp"

                    android:paddingStart="10dp"
                    android:layout_below="@id/sign_in_view_2"

                    android:background="@drawable/login_edittext"

                    android:drawableStart="@drawable/login_lock_theme"
                    android:drawablePadding="15dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/sign_in_confirm_password"

                    android:gravity="center"
                    android:orientation="horizontal"

                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/sign_in_no"
                        android:layout_width="135dp"
                        android:layout_height="60dp"

                        android:background="@drawable/login_button"

                        android:textColor="@color/login_button_text"
                        android:textSize="20sp"
                        android:text="@string/cancel"
                        android:fontFamily="sans-serif-condensed"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/sign_in_yes"
                        android:layout_width="135dp"
                        android:layout_height="60dp"

                        android:background="@drawable/login_button"

                        android:textColor="@color/login_button_text"
                        android:textSize="20sp"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:fontFamily="sans-serif-condensed"

                        android:layout_marginStart="20dp"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>