<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/afc_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="80dp"

        android:text="Confirm your email"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/afc_text_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="35dp"
        android:text="We've sent a code to"

        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afc_headline" />

    <TextView
        android:id="@+id/afc_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"

        android:text="tooldiamond2014@gmail.com"
        android:textColor="@color/black"
        android:textSize="17sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/afc_text_sent"
        app:layout_constraintTop_toBottomOf="@+id/afc_text_sent" />

    <TextView
        android:id="@+id/afc_wrong_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="22dp"

        android:text="@string/wrong_email"
        android:textColor="@color/black"
        android:textSize="17sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/afc_email_title"
        app:layout_constraintTop_toBottomOf="@+id/afc_email_title" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="22dp"
        android:text="@string/change"

        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toEndOf="@+id/afc_wrong_email"
        app:layout_constraintTop_toBottomOf="@+id/afc_email_title" />

    <EditText
        android:id="@+id/afc_et_1"
        android:layout_width="50dp"
        android:layout_height="60dp"

        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/auth_edittext_theme"
        android:gravity="center"

        android:inputType="number"
        android:text="1"
        android:textSize="28sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afc_wrong_email" />

    <EditText
        android:id="@+id/afc_et_2"
        android:layout_width="50dp"
        android:layout_height="60dp"

        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/auth_edittext_theme"
        android:gravity="center"

        android:inputType="number"
        android:text="2"
        android:textSize="28sp"

        app:layout_constraintStart_toEndOf="@+id/afc_et_1"
        app:layout_constraintTop_toBottomOf="@+id/afc_wrong_email" />

    <EditText
        android:id="@+id/afc_et_3"
        android:layout_width="50dp"
        android:layout_height="60dp"

        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/auth_edittext_theme"
        android:gravity="center"

        android:inputType="number"
        android:text="3"
        android:textSize="28sp"

        app:layout_constraintStart_toEndOf="@+id/afc_et_2"
        app:layout_constraintTop_toBottomOf="@+id/afc_wrong_email" />

    <EditText
        android:id="@+id/afc_et_4"
        android:layout_width="50dp"
        android:layout_height="60dp"

        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/auth_edittext_theme"
        android:gravity="center"

        android:inputType="number"
        android:text="4"
        android:textSize="28sp"

        app:layout_constraintEnd_toStartOf="@+id/afc_et_5"
        app:layout_constraintTop_toBottomOf="@+id/afc_wrong_email" />

    <EditText
        android:id="@+id/afc_et_5"
        android:layout_width="50dp"
        android:layout_height="60dp"

        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/auth_edittext_theme"
        android:gravity="center"

        android:inputType="number"
        android:text="5"
        android:textSize="28sp"

        app:layout_constraintEnd_toStartOf="@+id/afc_et_6"
        app:layout_constraintTop_toBottomOf="@+id/afc_wrong_email" />

    <EditText
        android:id="@+id/afc_et_6"
        android:layout_width="50dp"
        android:layout_height="60dp"

        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/auth_edittext_theme"
        android:gravity="center"

        android:inputType="number"
        android:text="6"
        android:textSize="28sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afc_wrong_email" />

    <View
        android:id="@+id/afc_divide_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/afc_et_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@id/afc_divide_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/afc_text_didnt_get_the_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"
            android:layout_weight="0.7"
            android:gravity="end"

            android:text="@string/didn_t_get_the_code"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/afc_text_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:gravity="start"

            android:text="@string/resend"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>